--- a/desafios/desafio12/index.html
+++ b/desafios/desafio12/index.html
@@ -35,15 +35,13 @@
         </p>
     </section>
 
-    <section class="imagem">
+    <section class="imagem" id="imagem1">
         <p>
             Quando cai a chuva grossa <br>
             A água do cume desce <br>
             O barro do cume escorre <br>
-            O mato no cume cresce 
-        
-        </p>
-        <p>
+            O mato no cume cresce <br>
+            
             Então, quando cessa a chuva <br>
             No cume volta a alegria <br>
             Pois torna a brilhar de novo <br>
@@ -67,7 +65,7 @@
         </p>
     </section>
 
-    <section class="imagem">
+    <section class="imagem" id="imagem2">
         <p>
             Quando cai a chuva grossa <br>
             A água do cume desce <br>
