--- a/exdanet/02/qr-code-component-main/site.html
+++ b/exdanet/02/qr-code-component-main/site.html
@@ -47,7 +47,7 @@
 </head>
 <body id="conteiner">
     <main id="conteudo">
-        <img src="qr-code-component-main/images/image-qr-code.png" alt="">
+        <img src="images/image-qr-code.png" alt="">
         <h1>Improve your front-end skills by building projects</h1>
         <p>Scam the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </main>
