--- a/exercicios/ex020/hover.html
+++ b/exercicios/ex020/hover.html
@@ -20,7 +20,7 @@
             border: 1px solid black;
             width: 200px;
         }
-        div%{
+        div{
             width: 200px;
         }
     </style>
